# chatbot-workshop

./: .gitignore  Datacation_workshop.ipynb  chat_app.py  pyproject.toml
chatbot_workshop/: processes.py
notebooks/: Datacation_workshop.ipynb  workshop_part_1.ipynb  workshop_part_2.ipynb
public/: custom.js
